# worktree-tool

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  aliases.sh  gwt-shell.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  getting_started.md
gwt_cli/: __init__.py  commands.py  git.py  gwt-shell.sh
tests/: test_gwt.py
