[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build-meta"

[project]
name = "git-worktree-tool"
version = "1.0.0"
description = "A CLI tool for managing Git worktrees using a bare repository structure."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "J. Lothian" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools]
script-files = ["bin/gwt-cli"]
